Fix for bug id #48 - Error messages are not visible in case of textfields. (#62)
* Error messages are visible on textfield.

* Update theme.scss

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -402,3 +402,7 @@ span.flatpickr-weekday {
   bottom: 110px;
   right: 40px;
 }
+
+.textfield-error-color{
+  color: #f46a6a;
+}
